# cexecutors

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
cexecutors/: __init__.py  interruptible.py
tests/: test_interruptible.py
