[tool.poetry]
name = "cexecutors"
version = "0.1.0"
description = "Custom Python executors"
authors = ["Roman Gonchar <goncharoman@gmail.com>"]
readme = "README.md"
keywords = ["executor", "threads"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
mypy = "^1.4.1"
flake8 = "^6.0.0"
pytest = "^7.4.0"
isort = "^5.12.0"
flake8-comprehensions = "^3.14.0"
flake8-bugbear = "^23.7.10"
flake8-quotes = "^3.3.2"
pyhamcrest = "^2.0.4"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
